--- a/board/templates/base.html
+++ b/board/templates/base.html
@@ -5,9 +5,10 @@
 </head>
 <body>
 <h1>Message Board</h1>
+{% include("_navigation.html") %}
 <section>
   <header>
-    {% block header %}{% endblock header %}
+    <h2>{% block header %}{% endblock header %}</h2>
   </header>
   <main>
     {% block content %}<p>No messages.</p>{% endblock content %}
