--- a/board/templates/pages/home.html
+++ b/board/templates/pages/home.html
@@ -8,4 +8,7 @@
   <p>
     Learn more about this project by visiting the <a href="{{ url_for('pages.about') }}">About page</a>.
   </p>
+  <p>
+    Learn more about this project by visiting the <a href="{{ url_for('pages.projects') }}">Projects</a>.
+  </p>
 {% endblock content %}
