--- a/website/templates/_navigation.html
+++ b/website/templates/_navigation.html
@@ -1,7 +1,4 @@
-<nav>
-  <ul>
-    <li><a href = "{{url_for('pages.home')}}">Home</a></li>
-    <li><a href = "{{url_for('pages.about')}}">About</a></li>
-    <li><a href = "{{url_for('pages.projects')}}">Projects</a></li>
-  </ul>
-</nav>
+<p><a href = "{{url_for('pages.home')}}">Home</a> 
+<a href = "{{url_for('pages.about')}}">About</a>
+<a href = "{{url_for('pages.projects')}}">Project</a></p>
+
