renaming and editing pages

--- a/website/templates/pages/about.html
+++ b/website/templates/pages/about.html
@@ -5,7 +5,7 @@
 {% endblock header %}
 
 {% block content %}
-  <p>This is a message board for friendly messages.</p>
-  <p> Return to home page using <a href="{{url_for('pages.home')}}">Home Page</a></p>
+<p> This is a personal project show casing API integration and machine Learning!</p>
+  <p> Working Progress ... </p>
 {% endblock content %}
 
