--- a/website/templates/pages/home.html
+++ b/website/templates/pages/home.html
@@ -5,10 +5,5 @@
 {% endblock header %}
 
 {% block content %}
-  <p>
-    Learn more about this project by visiting the <a href="{{ url_for('pages.about') }}">About page</a>.
-  </p>
-  <p>
-    Learn more about this project by visiting the <a href="{{ url_for('pages.projects') }}">Projects</a>.
-  </p>
+  <p> Working Progress ... </p>
 {% endblock content %}
