--- a/website/templates/pages/projects.html
+++ b/website/templates/pages/projects.html
@@ -5,7 +5,6 @@
 {% endblock header %}
 
 {%block content%}
-  <p>This is the list of projects</p>
-  <p>Go back <a href="{{url_for('pages.home')}}">Home Page<\a></p>
+  <p> Working Progress ... </p>
 {%endblock content%}
 
