--- a/website/templates/_navigation.html
+++ b/website/templates/_navigation.html
@@ -1,4 +1,8 @@
-<p><a href = "{{url_for('pages.home')}}">Home</a> 
+<p>
+<a href = "{{url_for('pages.home')}}">Home</a> 
 <a href = "{{url_for('pages.about')}}">About</a>
-<a href = "{{url_for('pages.projects')}}">Project</a></p>
+<a href = "{{url_for('pages.projects')}}">Project</a>
+<a href = "{{url_for('posts.create')}}">Create</a>
+<a href = "{{url_for('posts.posts')}}">Posts</a>
+</p>
 
