--- a/website/static/styles.css
+++ b/website/static/styles.css
@@ -32,3 +32,56 @@ main{
   width:80%;
   margin:auto;
 }
+
+article,
+form{
+  text-align:left;
+  min-width:200px;
+  padding:20px;
+  margin-bottom:20px;
+  box-shadow:0px0px10px#ccc;
+  vertical-align:top;
+}
+
+aside{
+  color:#ccc;
+  text-align:right;
+}
+
+form{
+  display:flex;
+  flex-direction:column;
+  margin-top:20px;
+}
+
+.form-group{
+  margin-bottom:20px;
+}
+
+.form-control{
+  width:100%;
+  padding:10px;
+  border:1pxsolid#ccc;
+  font-size:lem;
+}
+
+.submit-btn{
+  background-color:#007bff;
+  color:#fff;
+  border:none;
+  border-radius:4px;
+  padding:10px20px;
+  cursor:pointer;
+  font-size:lem;
+}
+
+.submit-btn:hover{
+  background-color:#0056b3
+}
+
+.message{
+  font-size:2.5em;
+  font-family:serif;
+  margin:0;
+  padding:0;
+}
