error handling and logging

--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Personal Website- {% block title %}{% endblock title %}</title>
+  <title>Personal Website {% block title %}{% endblock title %}</title>
   <link rel="stylesheet" href="{{url_for('static', filename='styles.css')}}">
 </head>
 <body>
@@ -10,7 +10,9 @@
 <section>
   <header>
     <h2>{% block header %}{% endblock header %}</h2>
-  </header>
+    {% for category, message in get_flashed_messages(with_categories=true) %}
+      <div class="flash {{ category }}">{{ message }}</div>
+    {% endfor %}
   <main>
     {% block content %}<p>No messages.</p>{% endblock content %}
   <main>
